--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==1.9.5
-Jinja2==2.8
-requests==2.9.1
-pytz==2016.4
-psycopg2==2.6.1
+django-push-notifications==1.4.1
 djangorestframework==3.3.3
 drfdocs==0.0.9
+Jinja2==2.8
+MarkupSafe==0.23
+psycopg2==2.6.1
+pytz==2016.4
+requests==2.9.1
